[package]
name = "spring_controller_parser"
description = "A Rust pest parser for Java Spring controllers"
license = "MIT"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/Relrige/spring_controller_parser"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
